--- a/PhotoManager.App/MainWindow.xaml
+++ b/PhotoManager.App/MainWindow.xaml
@@ -1,12 +1,30 @@
 ﻿<Window x:Class="PhotoManager.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PhotoManager.App"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Photo Manager" Height="600" Width="800">
 
-    </Grid>
+    <DockPanel>
+        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
+            <TextBox x:Name="DirTextBox" Width="400" Height="25" Margin="0,0,10,0"
+                     Text="C:\Users\Public\Pictures"/>
+            <Button Content="Load Photos"
+                    Width="100" Height="25"
+                    Command="{Binding LoadPhotosCommand}"
+                    CommandParameter="{Binding Text, ElementName=DirTextBox}" />
+            <TextBlock Text="{Binding StatusMessage}" Margin="20,0,0,0" VerticalAlignment="Center"/>
+        </StackPanel>
+
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <ItemsControl ItemsSource="{Binding Photos}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal" Margin="5">
+                            <Image Source="{Binding FilePath}" Width="100" Height="100" Stretch="UniformToFill"/>
+                            <TextBlock Text="{Binding FileName}" Margin="10,0,0,0" VerticalAlignment="Center"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+    </DockPanel>
 </Window>
