--- a/PhotoManager.App/App.xaml
+++ b/PhotoManager.App/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="PhotoManager.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PhotoManager.App"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:PhotoManager.App">
     <Application.Resources>
          
     </Application.Resources>
