--- a/PhotoManager.App/MainWindow.xaml
+++ b/PhotoManager.App/MainWindow.xaml
@@ -1,30 +1,45 @@
 ﻿<Window x:Class="PhotoManager.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Photo Manager" Height="600" Width="800">
+        Title="Photo Manager"
+        Height="450" Width="800">
+    <Grid Margin="10">
+      <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="*"/>
+          <RowDefinition Height="Auto"/>
+      </Grid.RowDefinitions>
 
-    <DockPanel>
-        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
-            <TextBox x:Name="DirTextBox" Width="400" Height="25" Margin="0,0,10,0"
-                     Text="C:\Users\Public\Pictures"/>
-            <Button Content="Load Photos"
-                    Width="100" Height="25"
-                    Command="{Binding LoadPhotosCommand}"
-                    CommandParameter="{Binding Text, ElementName=DirTextBox}" />
-            <TextBlock Text="{Binding StatusMessage}" Margin="20,0,0,0" VerticalAlignment="Center"/>
-        </StackPanel>
 
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
-            <ItemsControl ItemsSource="{Binding Photos}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal" Margin="5">
-                            <Image Source="{Binding FilePath}" Width="100" Height="100" Stretch="UniformToFill"/>
-                            <TextBlock Text="{Binding FileName}" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
-    </DockPanel>
+      <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,5" VerticalAlignment="Center">
+        <Button Content="Browse Photos" Command="{Binding LoadPhotosCommand}" Margin="0,0,10,0"/>
+        <TextBlock Text="{Binding SelectedDirectory}"
+                   Width="600" TextTrimming="CharacterEllipsis"
+                   VerticalAlignment="Center"/>
+      </StackPanel>
+
+      <ScrollViewer Grid.Row="1" Margin="5">
+        <ItemsControl ItemsSource="{Binding Photos}">
+          <ItemsControl.ItemsPanel>
+            <ItemsPanelTemplate>
+              <WrapPanel IsItemsHost="True" />
+            </ItemsPanelTemplate>
+          </ItemsControl.ItemsPanel>
+
+          <ItemsControl.ItemTemplate>
+            <DataTemplate>
+              <Border BorderBrush="Gray" BorderThickness="1" Margin="5">
+                <Image Source="{Binding FilePath}" Width="100" Height="100" Stretch="UniformToFill"/>
+              </Border>
+            </DataTemplate>
+          </ItemsControl.ItemTemplate>
+        </ItemsControl>
+      </ScrollViewer>
+
+      <StatusBar Grid.Row="2" VerticalAlignment="Bottom">
+        <StatusBarItem>
+          <TextBlock Text="{Binding StatusMessage}" />
+        </StatusBarItem>
+      </StatusBar>
+    </Grid>
 </Window>
