--- a/PhotoManager.App/MainWindow.xaml
+++ b/PhotoManager.App/MainWindow.xaml
@@ -2,19 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:PhotoManager.App.Views"
-        xmlns:viewModels="clr-namespace:PhotoManager.App.ViewModels"
-        Title="Photo Manager" Height="600" Width="900">
+        Title="Photo Manager"
+        Height="600" Width="900">
 
-
-  <Window.DataContext>
-    <viewModels:MainWindowViewModel />
-  </Window.DataContext>
-
-
+  <!-- No Window.DataContext here — App.xaml.cs will set it -->
 
   <Grid>
-    <views:SidebarView DataContext="{Binding Sidebar}" />
-    <views:PhotoGalleryView DataContext="{Binding PhotoGallery}" />
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="200"/>
+      <ColumnDefinition Width="*"/>
+    </Grid.ColumnDefinitions>
+
+    <!-- SidebarView is bound to Sidebar property on MainWindowViewModel -->
+    <views:SidebarView Grid.Column="0" DataContext="{Binding Sidebar}" />
+
+    <!-- PhotoGalleryView is bound to PhotoGallery property on MainWindowViewModel -->
+    <views:PhotoGalleryView Grid.Column="1" DataContext="{Binding PhotoGallery}" />
   </Grid>
-  
+
 </Window>
