--- a/PhotoManager.App/Views/PhotoGalleryView.xaml
+++ b/PhotoManager.App/Views/PhotoGalleryView.xaml
@@ -1,37 +1,48 @@
 <UserControl x:Class="PhotoManager.App.Views.PhotoGalleryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Background="LightGray">
-    <ScrollViewer>
-        <ItemsControl ItemsSource="{Binding Photos}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel IsItemsHost="True"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <Border Margin="5" Background="#F0F0F0" CornerRadius="8" BorderBrush="LightGray" BorderThickness="1" Padding="5">
-                        <Grid Width="150" Height="180">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:views="clr-namespace:PhotoManager.App.Views"
+             Background="LightGray">
+    <DockPanel>
+        <!-- Toolbar at the top -->
+        <views:ToolbarView DockPanel.Dock="Top" />
 
-                            <Border BorderBrush="Gray" BorderThickness="1" Grid.Row="0">
-                                <Image Source="{Binding Thumbnail}" Stretch="UniformToFill"/>
-                            </Border>
+        <!-- StatusBar at the bottom -->
+        <views:StatusBarView DockPanel.Dock="Bottom" />
 
-                            <CheckBox IsChecked="{Binding IsSelected}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3" Background="White" Opacity="0.8" ToolTip="Select photo"/>
+        <!-- Main photo gallery content -->
+        <ScrollViewer>
+            <ItemsControl ItemsSource="{Binding PhotosView}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel IsItemsHost="True"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Border Margin="5" Background="#F0F0F0" CornerRadius="8" BorderBrush="LightGray" BorderThickness="1" Padding="5">
+                            <Grid Width="150" Height="180">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
 
-                            <StackPanel Grid.Row="1" Margin="3">
-                                <TextBlock Text="{Binding FileName}" FontSize="12" FontWeight="Bold" TextTrimming="CharacterEllipsis"/>
-                                <TextBlock Text="{Binding FileSize}" FontSize="11"/>
-                                <TextBlock Text="{Binding Dimensions}" FontSize="11"/>
-                            </StackPanel>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
-    </ScrollViewer>
+                                <Border BorderBrush="Gray" BorderThickness="1" Grid.Row="0">
+                                    <Image Source="{Binding Thumbnail}" Stretch="UniformToFill"/>
+                                </Border>
+
+                                <CheckBox IsChecked="{Binding IsSelected}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3" Background="White" Opacity="0.8" ToolTip="Select photo"/>
+
+                                <StackPanel Grid.Row="1" Margin="3">
+                                    <TextBlock Text="{Binding FileName}" FontSize="12" FontWeight="Bold" TextTrimming="CharacterEllipsis"/>
+                                    <TextBlock Text="{Binding FileSize}" FontSize="11"/>
+                                    <TextBlock Text="{Binding Dimensions}" FontSize="11"/>
+                                </StackPanel>
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+    </DockPanel>
 </UserControl>
