--- a/PhotoManager.App/Views/PhotoGalleryView.xaml
+++ b/PhotoManager.App/Views/PhotoGalleryView.xaml
@@ -2,7 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:views="clr-namespace:PhotoManager.App.Views"
+             xmlns:converters="clr-namespace:PhotoManager.App.Converters"
              Background="LightGray">
+    <UserControl.Resources>
+        <converters:BoolToStarColorConverter x:Key="BoolToStarColorConverter"/>
+    </UserControl.Resources>
+
     <DockPanel>
         <!-- Toolbar at the top -->
         <views:ToolbarView DockPanel.Dock="Top" />
@@ -26,6 +31,21 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="Auto"/>
                                 </Grid.RowDefinitions>
+                                
+                                <!-- Add inside the Grid, ideally overlaying the image -->
+                                <Button Grid.Row="0"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Top"
+                                        Margin="3"
+                                        Width="24"
+                                        Height="24"
+                                        Background="Transparent"
+                                        BorderThickness="0"
+                                        ToolTip="Mark as Favorite"
+                                        Panel.ZIndex="1"
+                                        Click="FavoriteButton_Click">
+                                    <Path Data="M 12,2 L 15,8.5 L 22,9.3 L 17,14.1 L 18.2,21 L 12,17.8 L 5.8,21 L 7,14.1 L 2,9.3 L 9,8.5 Z" Fill="{Binding IsFavorite, Converter={StaticResource BoolToStarColorConverter}}" Stretch="Uniform"/>
+                                </Button>
 
                                 <Border BorderBrush="Gray" BorderThickness="1" Grid.Row="0">
                                     <Image Source="{Binding Thumbnail}" Stretch="UniformToFill"/>
