--- a/PhotoManager.App/Views/SidebarView.xaml
+++ b/PhotoManager.App/Views/SidebarView.xaml
@@ -3,17 +3,67 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Width="200" Background="#FF2D2D30">
     <StackPanel>
-        <ItemsControl ItemsSource="{Binding MenuItems}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding}" 
-                               Foreground="White"
-                               FontSize="16"
-                               FontWeight="Bold"
-                               Margin="10,10,0,10"
-                               Cursor="Hand"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+        <ListBox ItemsSource="{Binding MenuItems}"
+                 SelectedItem="{Binding SelectedMenu, Mode=TwoWay}"
+                 Background="Transparent"
+                 BorderThickness="0"
+                 Foreground="White">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="FontSize" Value="16"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="Margin" Value="6,4,6,4"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <Border x:Name="Bd"
+                                        Background="{TemplateBinding Background}"
+                                        CornerRadius="8"
+                                        Padding="8,4"
+                                        SnapsToDevicePixels="True"
+                                        Margin="2,2,2,2">
+                                    <Grid>
+                                        <Border x:Name="Accent"
+                                                Background="#FF007ACC"
+                                                Width="4"
+                                                HorizontalAlignment="Left"
+                                                CornerRadius="2"
+                                                Visibility="Collapsed"/>
+                                        <ContentPresenter HorizontalAlignment="Left"
+                                                          VerticalAlignment="Center"
+                                                          Margin="10,0,0,0"/>
+                                    </Grid>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="Bd" Property="Background">
+                                            <Setter.Value>
+                                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,0">
+                                                    <GradientStop Color="#FF007ACC" Offset="0"/>
+                                                    <GradientStop Color="#FF3399FF" Offset="1"/>
+                                                </LinearGradientBrush>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Setter TargetName="Bd" Property="Effect">
+                                            <Setter.Value>
+                                                <DropShadowEffect Color="#33000000" BlurRadius="8" ShadowDepth="2"/>
+                                            </Setter.Value>
+                                        </Setter>
+                                        <Setter TargetName="Accent" Property="Visibility" Value="Visible"/>
+                                        <Setter Property="Foreground" Value="White"/>
+                                    </Trigger>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter TargetName="Bd" Property="Background" Value="#22007ACC"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
     </StackPanel>
 </UserControl>
